--- a/.github/workflows/pull_request_external.yaml
+++ b/.github/workflows/pull_request_external.yaml
@@ -8,10 +8,16 @@ on:
       - "BIPs/**"
       - "config/**"
       - "MaxiOps/**"
+    types:
+      - labeled
 jobs:
   run_reports:
-    uses: "BalancerMaxis/test_external_pr_actions/.github/workflows/run_reports_reusable.yaml@main"
-    secrets: inherit
-    with:
-      pr_number: ${{ github.event.number }}
-      checkout_ref: ${{ github.event.pull_request.head.ref }}
+    if: ${{ github.event.label.name == 'external' }}
+    runs-on: ubuntu-latest
+    environment: external_pr
+    steps:
+      - uses: "BalancerMaxis/test_external_pr_actions/.github/workflows/run_reports_reusable.yaml@main"
+        # secrets: inherit
+        with:
+          pr_number: ${{ github.event.number }}
+          checkout_ref: ${{ github.event.pull_request.head.ref }}
