--- a/.github/workflows/run_reports.yaml
+++ b/.github/workflows/run_reports.yaml
@@ -22,7 +22,7 @@ on:
 jobs:
   generate_reports:
     runs-on: ubuntu-latest
-    environment: ${{ github.repository_owner != 'BalancerMaxis' && 'external_pr' || '' }}
+    environment: ${{ github.repository_owner == 'BalancerMaxis' && '' || 'external_pr' }}
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       WEB3_INFURA_PROJECT_ID: ${{ secrets.WEB3_INFURA_PROJECT_ID }}
