ci: more github context vars to stdout

--- a/.github/workflows/run_reports.yaml
+++ b/.github/workflows/run_reports.yaml
@@ -63,6 +63,10 @@ jobs:
       - name: Setup Environment
         run: |
           echo "gh repo owner is ${{ github.repository_owner }}"
+          echo "gh base ref is ${{ github.base_ref }}"
+          echo "gh head ref is ${{ github.head_ref }}"
+          echo "gh ref is ${{ github.ref }}"
+          echo "gh ref is ${{ github.workspace }}"
           cd action-scripts/brownie
           : # https://github.com/yaml/pyyaml/issues/724#issuecomment-1848423837
           pip install "cython<3.0.0" wheel
